# remnawave

./: license  main.py  nicifications.yaml  nicifier.py  pyproject.toml  readme.md  remnawave.diff.json  remnawave.json  remnawave.min.json
.github/workflows/: update-openapi.yml
nicifier/: __main__.py  error_codes.py  nicifcations_schema.py  nicifications.yaml  nicifier_schema.py
tests/: test_inline_objects.py
